add status for users and change mode admin and fix structure text and add new registration algorithm

--- a/source/.env
+++ b/source/.env
@@ -1,2 +1,3 @@
 MYSQL_URL=mysql://root:KLyXjPfvDL1tKbNHK8_sVwUBrdTFER@158.160.105.173:3306/upravlyaika_db
 TOKEN_BOT=6468379293:AAHvHD3XTueToNzohb-waznBsQI5SOz733k
+REDIS_URL=redis://:EvsnEEhzaLj5a-38e5FxOvrTn@158.160.105.173:6379/
