fix to encrypt api key bank and urls google

--- a/source/.env
+++ b/source/.env
@@ -1,3 +1,4 @@
 MYSQL_URL=mysql://root:KLyXjPfvDL1tKbNHK8_sVwUBrdTFER@158.160.105.173:3306/upravlyaika_db
 TOKEN_BOT=6626881764:AAGv-QyEncc_012iEKsDd8F3_IOYuipp0N0
 REDIS_URL=redis://:EvsnEEhzaLj5a-38e5FxOvrTn@158.160.105.173:6379/
+SECRET_KEY=ndDSpWCNY3sfYX3y_xMIc220eVMK5E_7sgz-baicwDo=
