fix passwords sql and redis

--- a/source/.env
+++ b/source/.env
@@ -1,4 +1,4 @@
-MYSQL_URL=mysql://root:KLyXjPfvDL1tKbNHK8_sVwUBrdTFER@158.160.105.173:3306/upravlyaika_db
+MYSQL_URL=mysql://upravlyaika_admin:GJM19YSZIZHVV7GAC5HQ5KP959GSIX@158.160.124.16:57269/upravlyaika_db
 TOKEN_BOT=6626881764:AAGv-QyEncc_012iEKsDd8F3_IOYuipp0N0
-REDIS_URL=redis://:EvsnEEhzaLj5a-38e5FxOvrTn@158.160.105.173:6379/
+REDIS_URL=redis://:E326UCA0Y4BRA28CFTKVY0KVDJ7X6D@158.160.124.16:27408/
 SECRET_KEY=ndDSpWCNY3sfYX3y_xMIc220eVMK5E_7sgz-baicwDo=
