--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-aiogram~=3.1.1
+aiohttp
+aiogram~=3.2.0
+aiomysql
 tortoise-orm
 tortoise-orm[asyncmy]
 aerich
 gspread-asyncio
-environs~=9.5.0
 aiogoogle~=5.5.0
 aiofiles~=23.1.0
-cryptography~=40.0.2
+cryptography~=41.0.7
 redis~=5.0.1
 aioshutil~=1.3
+python-dotenv~=1.0.0
