--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MSQ_DB=upravlyaika_db
 MSQ_USER=upravlyaika_admin
 MSQ_PASSWORD=GJM19YSZIZHVV7GAC5HQ5KP959GSIX
+MSQ_ROOT_PASSWORD=Xm78ojLxhNWwCnr7s4YsGOpFiMnwX
 RS_PASSWORD=WDaf0rtvqbQG9-dl2uafaiBnTV9HoZ
