--- a/source/.env
+++ b/source/.env
@@ -1,4 +1,4 @@
-MYSQL_URL=mysql://root:Xm78ojLxhNWwCnr7s4YsGOpFiMnwX@upravlyaika_db:57269/upravlyaika_db
+MYSQL_URL=mysql://upravlyaika_admin:GJM19YSZIZHVV7GAC5HQ5KP959GSIX@localhost:57269/upravlyaika_db
 TOKEN_BOT=6626881764:AAGv-QyEncc_012iEKsDd8F3_IOYuipp0N0
 REDIS_URL=redis://:WDaf0rtvqbQG9-dl2uafaiBnTV9HoZ@upravlyaika_cache:6379/
 SECRET_KEY=ndDSpWCNY3sfYX3y_xMIc220eVMK5E_7sgz-baicwDo=
